# memalot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
src/leaky/: __init__.py  api.py  base.py  cli.py  interface.py  memory.py  monitors.py  objects.py  options.py  output.py  report_generator.py  reports.py  snapshots.py  utils.py
src/leaky/mcp_server/: main.py  pyproject.toml
src/memalot/: api.py
src/memalot/mcp_server/: pyproject.toml
src/tests/: test_api.py  test_base.py  test_cli.py  test_memory.py  test_monitors.py  test_objects.py  test_options.py  test_output.py  test_report_generator.py  test_reports.py  test_snapshots.py  test_utils.py  utils_for_testing.py
src/tests/mcp_server/: test_main.py
src/tests/test_data/reports/v1/leaky_report_d6wf-uw2w/: iteration_report_1.json  iteration_report_2.json  iteration_report_3.json  summary.json
src/tests/test_data/reports/v1/leaky_report_lyy0-uf3p/: iteration_report_1.json  iteration_report_2.json  iteration_report_3.json  summary.json
src/tests/test_data/reports/v1/leaky_report_ykik-ab4l/: iteration_report_1.json  iteration_report_2.json  iteration_report_3.json  summary.json
src/tests/test_data/reports/v1/memalot_report_d6wf-uw2w/: iteration_report_2.json  iteration_report_3.json
src/tests_integration/: test_cache_examples.py  test_converging_tree.py  test_integration.py  test_time_based.py  utils.py
src/tests_performance/: test_performance_barbell.py  test_performance_objects.py
(+4 files in other folders)
